# astrbot_plugin_scriptor

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LEARNING_AND_TEACHING_QUICK_REFERENCE.md  README.md  VERSION_UPDATE_SOP.md  __init__.py  _conf_schema.json  install.bat  install.sh  license  main.py  metadata.yaml  plugin.json  pyproject.toml  requirements.txt  演进架构文档.md
.github/workflows/: ci.yml
core/: __init__.py  active_reply_manager.py  architecture_enhancements.py  background_tasks.py  compactor.py  concurrency_guard.py  config_pydantic.py  constants.py  context_indexer.py  conversation_ledger.py  cross_group_message.py  enhanced_features.py  exceptions.py  feedback_queue.py  file_manager.py  file_monitor.py  group_manager.py  identity_manager.py  interfaces.py  knowledge_base.py  knowledge_graph.py  learning_manager.py  media_manager.py  memory_manager.py  memory_struct.py  message_buffering.py  message_sanitizer.py  pending_tasks.py  permission_manager.py  prompt_builder.py  research_tool.py  scheduler.py  search_engine.py  session_locks.py  slash_command_router.py  smart_sender.py  todo_manager.py  tool_decoration.py  tool_health_manager.py  tool_permission_engine.py  (+1 more)
core/archives/: __init__.py  ingestor.py  manager.py  router.py
core/search_providers/: __init__.py  searxng_client.py  summarizer.py
data/global/: archives.db
docs/: COMMAND_PROXY_OPTIMIZATION.md  CONFIG_SYNC_FIX.md  CONFIG_SYNC_USAGE.md  DOCUMENTATION_UPDATE_SUMMARY.md  INDEX.md  LEARNING_MODE_GUIDE.md  Scriptor_API_Reference.md  Scriptor_Advanced_Features.md  Scriptor_Architecture_Upgrade_Guide.md  Scriptor_System_Design_Philosophy.md  Scriptor_User_Guide.md  claude_code_nonfile_tools_analysis.md  claude_code_tools_analysis.md  skill_enhancement_plan_phase_ab.md  tool_improvement_plan.md  v2_enhancement_plan.md
docs/astrbot/: extra_content_usage.md  plugin_event_injection_guide.md  plugin_prompt_injection_guide.md
docs/source/: api.rst  conf.py  index.md
examples/: README.md
examples/global_data/: SOUL.md
examples/standard_group_profile/: G_PROFILE.md
examples/standard_user_profile/: P_PROFILE.md  P_SOUL.md
graphify-out/: graph.html
hooks/: __init__.py  manager.py
hooks/lifecycle/: __init__.py
hooks/llm/: __init__.py
hooks/message/: __init__.py
hooks/search/: __init__.py
hooks/storage/: __init__.py
knowledge_docs/: 01_FAQ.md  02_Quick_Start.md  03_Commands_and_Tools.md
mixins/: __init__.py  admin_mixin.py  base.py  commands_mixin.py  events_mixin.py  helpers_mixin.py  identity_mixin.py  knowledge_mixin.py  learning_mixin.py  media_tools_mixin.py  memory_mixin.py  tools_mixin.py
scripts/: build_hook.py  check_quality.py  fix_format.py  quick_quality_check.py
skills/scriptor-archive-manager/: SKILL.md
skills/scriptor-group-admin/: SKILL.md
skills/scriptor-knowledge-research/: SKILL.md
skills/scriptor-media-gallery/: SKILL.md
skills/scriptor-todo-schedule/: SKILL.md
sop/: architecture.md  identity_group.md  maintenance.md
templates/global/: HEARTBEAT.md  MEMORY.md  SOP.md  SOUL.md
templates/group/: G_BOOTSTRAP.md  G_GROUP.md  G_HEARTBEAT.md  G_MEMORY.md  G_PROFILE.md  G_SOP.md  G_SOUL.md  G_TODO.md
templates/personal/: P_AGENTS.md  P_BOOTSTRAP.md  P_HEARTBEAT.md  P_MEMORY.md  P_PROFILE.md  P_SOP.md  P_SOUL.md  P_TODO.md
tests/: README.md  analyze_tool_impact.py  conftest.py  run_architecture_tests.py  run_tests.py  test_active_reply.py  test_active_reply_enhanced.py  test_architecture_enhancements.py  test_astrbot_contract.py  test_async_io.py  test_at_conversion.py  test_backup_manager.py  test_config.py  test_context_indexer.py  test_conversation_ledger.py  test_core_logic.py  test_cross_group_message.py  test_defense_mechanisms.py  test_delete_confirmation.py  test_encryption.py  test_enhanced.py  test_file_import_simple.py  test_file_import_to_archive.py  test_file_monitor.py  test_file_permission.py  test_global_memory.py  test_hooks.py  test_integration.py  test_knowledge_graph_fix.py  test_knowledge_graph_standalone.py  test_knowledge_graph_sync.py  test_learning_manager.py  test_learning_manager_import.py  test_media_manager_simple.py  test_media_tools_registration.py  test_memory_manager.py  test_memory_routing.py  test_new_features.py  test_performance.py  test_permissions.py  (+13 more)
tests/helpers/: import_helper.py  test_fixtures.py
tests/integration/: test_learning_workflow.py
tools/: __init__.py  recurrence_parser.py  skill_tool.py  tool_search.py  web_fetch_tool.py  web_search_tool.py
tools/common/: __init__.py  async_io.py  bm25.py  file_ops.py  image_utils.py  json_parser.py  text_utils.py
tools/config/: __init__.py  compactor_prompts.py  enhanced_patterns.py  memory_patterns.py  sanitizer_rules.py
tools/integration/: __init__.py  embedding.py
tools/performance/: __init__.py  monitor.py
tools/security/: __init__.py  encryption.py  sanitizer.py
tools/storage/: __init__.py  backup_manager.py  debounced_writer.py
web/: README.md  api.py  index.html  package-lock.json  package.json  shared_state.py  vite.config.ts
web/src/: App.vue  main.ts
web/src/assets/styles/: main.scss
web/src/components/common/: StatCard.vue
web/src/components/layout/: AppHeader.vue  AppSidebar.vue
web/src/components/scriptor/: ConfigSection.vue
web/src/composables/: useScriptorApi.ts
web/src/layouts/: MainLayout.vue
web/src/plugins/: vuetify.ts
web/src/router/: index.ts
web/src/stores/: app.ts  auth.ts
web/src/theme/: index.ts
web/src/types/: index.ts
web/src/views/: ArchiveManager.vue  ConfigPanel.vue  Debug.vue  KnowledgeBase.vue  Login.vue  Maintenance.vue  MemoryManager.vue  Overview.vue  Performance.vue
